# investmodel

./: Cargo.toml  README.md
examples/: draw.rs
src/: lib.rs
src/invest/: mod.rs
src/plot/: mod.rs
src/sources/: yahoo.rs
src/ticker/: mod.rs  monthly.rs
