[package]
name = "investmodel"
version = "0.1.0"
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
csv = "1.0.7"
